--- a/src/components/AppLogo/AppLogo.css
+++ b/src/components/AppLogo/AppLogo.css
@@ -1,5 +1,5 @@
 .logo {
-	font-family: 'Montserrat';
+	font-family: 'Montserrat', sans-serif;
 	font-style: normal;
 	font-weight: 500;
 	font-size: 20px;
