--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,8 @@
 	margin: 0px;
 	padding: 0px;
 	background: #555555;
-	font-family: 'Montserrat', sans-serif;
+}
+
+body::-webkit-scrollbar {
+	display: none;
 }
