Create FilterGenre Component

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -11,3 +11,9 @@ main {
 	height: 1311px;
 	background-color: #232323;
 }
+
+.main__container__tools {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
