--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -1,4 +1,4 @@
-.movie-card {
+.movie-card__container {
 	display: flex;
 	flex-direction: column;
 
@@ -9,6 +9,11 @@
 .movie-card__image {
 	width: 327px;
 	height: 464px;
+}
+
+.movie-card {
+	display: flex;
+	justify-content: flex-end;
 }
 
 .movie-card__information {
@@ -74,4 +79,15 @@
 
 	color: #ffffff;
 	opacity: 0.7;
+}
+
+.menu-icon {
+	padding-top: 14px;
+	padding-right: 14px;
+	position: absolute;
+	opacity: 0;
+}
+
+:hover > .menu-icon {
+	opacity: 1;
 }
