--- a/src/components/AppLogo/AppLogo.css
+++ b/src/components/AppLogo/AppLogo.css
@@ -6,10 +6,11 @@
 	line-height: 24px;
 	letter-spacing: .5px;
 	color: #f65261;
-	background-color: inherit;
+	background-color: transparent;
+	z-index: 3;
 }
 
 #logo--bolded {
 	font-weight: 900;
-	background-color: inherit;
+	background-color: transparent;
 }
