--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,7 +8,7 @@ header {
 .header__background {
 	box-sizing: border-box;
 	height: 100%;
-	background: url("https://s3-alpha-sig.figma.com/img/9ab1/b611/92a81bbe79a924292111ca43f3a39e8f?Expires=1654473600&Signature=aUhTX7aUmhSKHsk4ewxfxWQdvASlqSEr9L68B-kQNrmWOQPT7wEcpcNBQWwIqYrV0SB2itnDv0xC9xRKAsRxG1vdoFjcafu7rdHKZl9tVujko0mYqYenAWnQoVry1q4P7x8-SjG8jLxaTlGg7AFvH8HwR0KPbKsuAn38SHo-urEYSV5rnrhAtlDUbZFQ~jbMdjoO7JaBZPnh5xbjBAqcPfe88FpCTvuf59vTy3SxMHqUaZZY-DeRFxcHIIZGIjDhE7HetW8NYyn8gS9XjA6zWIlaHutfJgf-QdLEMMzS8goW1P8g6K739LCuk-zWumOSx5ZmrwcS6Wdro~C2D8joew__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
+	background: url("https://s3-alpha-sig.figma.com/img/9ab1/b611/92a81bbe79a924292111ca43f3a39e8f?Expires=1655683200&Signature=TkELiImK53JvhHPqeKGbQ5JC14zKtdT~WU3M0cEfg2ydP7XzUjsrYSH9BRAFNiAFcta31ER9U7aJw243hH9NlsXFSNE1J8B1TPq9YDTzDjUjW27bJapgrpomgfekI0NAilekN4-eCVctJs8-JeR5JVf0ZZ-6GgWU3-S749TlvlRvIUYiSBxknNL2vwGbqruTn5fXYkRI2pGB6AkCqcmlH8CUq1KD8lJBRhKHUOnpxJnb-8cKnBxoXUH6LXleWvMSEw6uf90SIVQ3UYo1sIgPvUfPLIgY6H-dVKDkLMbxLqLzdZDgNNu8QiWxJYRHN0Wp-db-UcJ~uGe2IDlMe71LDA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
 	mix-blend-mode: normal;
 	opacity: 0.3;
 	filter: blur(8.15485px);
