--- a/src/components/DeleteMovie/DeleteMovie.css
+++ b/src/components/DeleteMovie/DeleteMovie.css
@@ -1,7 +1,7 @@
 .delete-movie__container {
-	position: fixed;
+	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: 1787px;
 	left: 0px;
 	top: 0px;
 	z-index: 1;
