--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,20 @@
-.app {
-	display: flex;
-	flex-direction: column;
+.loading-message {
+	padding-top: 50px;
+	padding-left: 50px;
+	height: 20px;
+
+	font-family: 'Montserrat', sans-serif;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 32px;
+	line-height: 20px;
+
+	text-transform: uppercase;
+
+	color: #ffffff;
+}
+
+.loading-message__container {
+	height: 1321px;
+	background-color: #232323;
 }
