--- a/src/components/MovieDetails/MovieDetails.css
+++ b/src/components/MovieDetails/MovieDetails.css
@@ -1,30 +1,29 @@
 .movie-details {
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 500px;
+	height: 100%;
 	width: 100%;
 	background: #232323;
 	box-sizing: border-box;
 }
 
 .movie-details__nav {
-	padding: 28px;
+	padding: 28px 60px;
 
 	display: flex;
 	flex-direction: row;
-	justify-content: end;
+	justify-content: space-between;
 }
 
 .movie-details__main {
 	display: flex;
 	flex-direction: row;
+	padding-bottom: 30px;
 }
 
 .movie-details__main img {
-	padding-left: 70px;
-	width: 250px;
-	height: 386px;
+	padding-left: 60px;
+
+	width: 323px;
+	height: 486px;
 }
 .movie-details__data {
 	padding-left: 60px;
