--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,20 +1,20 @@
 .loading-message {
-	padding-top: 50px;
-	padding-left: 50px;
-	height: 20px;
+  padding-top: 50px;
+  padding-left: 50px;
+  height: 20px;
 
-	font-family: 'Montserrat', sans-serif;
-	font-style: normal;
-	font-weight: 500;
-	font-size: 32px;
-	line-height: 20px;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 20px;
 
-	text-transform: uppercase;
+  text-transform: uppercase;
 
-	color: #ffffff;
+  color: #ffffff;
 }
 
 .loading-message__container {
-	height: 1321px;
-	background-color: #232323;
+  height: 1321px;
+  background-color: #232323;
 }
