--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -1,93 +1,93 @@
 .movie-card__container {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-	width: 327px;
-	height: 560px;
+  width: 327px;
+  height: 560px;
 }
 
 .movie-card__image {
-	width: 327px;
-	height: 464px;
+  width: 327px;
+  height: 464px;
 }
 
 .movie-card {
-	display: flex;
-	justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .movie-card__information {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 
-	margin-top: 13px;
+  margin-top: 13px;
 }
 
 .movie-card__information-title {
-	height: 22px;
+  height: 22px;
 
-	font-family: 'Montserrat', sans-serif;
-	font-style: normal;
-	font-weight: 500;
-	font-size: 18px;
-	line-height: 22px;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
 
-	color: #ffffff;
-	background-color: #232323;
-	mix-blend-mode: normal;
-	opacity: 0.7;
+  color: #ffffff;
+  background-color: #232323;
+  mix-blend-mode: normal;
+  opacity: 0.7;
 }
 
 .movie-card__information-year {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
 
-	width: 66px;
-	height: 22px;
+  width: 66px;
+  height: 22px;
 
-	border: 1px solid #979797;
-	mix-blend-mode: normal;
-	opacity: 0.5;
-	border-radius: 4px;
+  border: 1px solid #979797;
+  mix-blend-mode: normal;
+  opacity: 0.5;
+  border-radius: 4px;
 }
 
 .movie-card__information-year p {
-	font-family: 'Montserrat', sans-serif;
-	font-style: normal;
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 17px;
-	text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
 
-	color: #ffffff;
+  color: #ffffff;
 
-	mix-blend-mode: normal;
+  mix-blend-mode: normal;
 }
 
 .movie-card__genre {
-	margin-top: 8px;
-	height: 17px;
+  margin-top: 8px;
+  height: 17px;
 
-	font-family: 'Montserrat', sans-serif;
-	font-style: normal;
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 17px;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
 
-	color: #ffffff;
-	opacity: 0.7;
+  color: #ffffff;
+  opacity: 0.7;
 }
 
 .menu-icon {
-	padding-top: 14px;
-	padding-right: 14px;
-	position: absolute;
-	opacity: 0;
+  padding-top: 14px;
+  padding-right: 14px;
+  position: absolute;
+  opacity: 0;
 }
 
 :hover > .menu-icon {
-	opacity: 1;
+  opacity: 1;
 }
