--- a/src/components/MovieDialog/MovieDialog.css
+++ b/src/components/MovieDialog/MovieDialog.css
@@ -11,10 +11,12 @@
 
 .movie-dialog {
   position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   width: 976px;
-  height: 717px;
-  right: 15%;
-  top: 5%;
+  height: 750px;
   z-index: 5;
 
   background: #232323;
