--- a/src/components/MoviesSearchBar/MoviesSearchBar.css
+++ b/src/components/MoviesSearchBar/MoviesSearchBar.css
@@ -70,3 +70,14 @@
   opacity: 0.3;
   padding-left: 2.66%;
 }
+
+.search-movie__bar {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+
+  color: #ffffff;
+  padding-left: 2.66%;
+}
