--- a/src/components/MovieDialog/MovieDialog.css
+++ b/src/components/MovieDialog/MovieDialog.css
@@ -174,3 +174,17 @@
 
   color: #ffffff;
 }
+
+.movie-dialog__form__container p {
+  margin-top: 5px;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+
+  color: #f65261;
+
+  mix-blend-mode: normal;
+  opacity: 0.8;
+}
