--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,4 +1,4 @@
-main {
+.main {
   height: auto;
   overflow: visible;
 }
@@ -26,4 +26,25 @@ main {
   width: 94%;
   height: 2px;
   background: #424242;
+}
+
+.loading-message {
+  padding-top: 50px;
+  padding-left: 50px;
+  height: 20px;
+
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 20px;
+
+  text-transform: uppercase;
+
+  color: #ffffff;
+}
+
+.loading-message__container {
+  height: 1321px;
+  background-color: #232323;
 }
