Refactor the top wrapper classNames to include component name

--- a/src/components/AppLogo/AppLogo.scss
+++ b/src/components/AppLogo/AppLogo.scss
@@ -1,22 +1,9 @@
-$color-white: #ffffff;
-$color-light-grey: #555555;
-$color-medium-grey: #424242;
-$color-dark-grey: #232323;
-$color-red: #f65261;
-$font-stack: "Montserrat", sans-serif;
+@import "styles/colors";
+@import "styles/fonts";
 
-%font-shared {
-  font-family: $font-stack;
-  font-style: normal;
-  font-size: 20px;
-  line-height: 24px;
-}
-
-.logo {
-  @extend %font-shared;
-  font-weight: 500;
+.app-logo {
+  @include font($weight: 500, $size: 20px, $height: 24px);
   letter-spacing: 0.5px;
-
   color: $color-red;
 
   span {
