--- a/src/components/AddMovieButton/AddMovieButton.scss
+++ b/src/components/AddMovieButton/AddMovieButton.scss
@@ -2,7 +2,7 @@
 @import "styles/fonts";
 @import "styles/buttons";
 
-.btn--secondary {
+.add-movie-button {
   @extend %btn--secondary-shared;
   width: 178px;
   height: 46px;
