--- a/src/components/GenresList/GenresList.scss
+++ b/src/components/GenresList/GenresList.scss
@@ -1,7 +1,7 @@
 @import "styles/colors";
 @import "styles/fonts";
 
-.list__genres {
+.genres-list {
   list-style-type: none;
   width: 436px;
   padding-top: 20px;
