--- a/src/components/MoviesSearchBar/MoviesSearchBar.scss
+++ b/src/components/MoviesSearchBar/MoviesSearchBar.scss
@@ -2,12 +2,12 @@
 @import "styles/fonts";
 @import "styles/buttons";
 
-.search-movie {
+.movies-search-bar {
   display: flex;
   flex-direction: column;
   background-color: inherit;
 
-  .search-movie__header {
+  .movies-search-bar__header {
     @include font($weight: 300, $size: 40px, $height: 50px);
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -17,7 +17,7 @@
     padding-top: 58px;
   }
 
-  .search-movie__form {
+  .movies-search-bar__form {
     margin-left: 150px;
     margin-top: 50px;
     background-color: inherit;
