--- a/src/components/MoviesSortDropdown/MoviesSortDropdown.scss
+++ b/src/components/MoviesSortDropdown/MoviesSortDropdown.scss
@@ -1,7 +1,7 @@
 @import "styles/colors";
 @import "styles/fonts";
 
-.sort-movie {
+.movies-sort-dropdown {
   padding-top: 20px;
   width: 364px;
 
