--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -8,7 +8,7 @@
   width: 328px;
   height: 560px;
 
-  .movie-card__container {
+  &__container {
     display: flex;
     justify-content: flex-end;
 
@@ -29,14 +29,14 @@
     }
   }
 
-  .movie-card__information {
+  &__information {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 
     margin-top: 14px;
 
-    .movie-card__information__title {
+    &__title {
       @include font($weight: 500, $size: 18px, $height: 22px);
 
       background-color: #232323;
@@ -44,7 +44,7 @@
       mix-blend-mode: normal;
     }
 
-    .movie-card__information__year {
+    &__year {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -63,7 +63,7 @@
       }
     }
   }
-  .movie-card__genre {
+  &__genre {
     @include font($weight: 500, $size: 14px, $height: 17px);
     margin-top: 8px;
     opacity: 0.7;
