--- a/src/components/MoviesSearchBar/MoviesSearchBar.scss
+++ b/src/components/MoviesSearchBar/MoviesSearchBar.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   background-color: inherit;
 
-  .movies-search-bar__header {
+  &__header {
     @include font($weight: 300, $size: 40px, $height: 50px);
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -17,7 +17,7 @@
     padding-top: 58px;
   }
 
-  .movies-search-bar__form {
+  &__form {
     margin-left: 150px;
     margin-top: 50px;
     background-color: inherit;
