--- a/src/components/DeleteMovieDialog/DeleteMovieDialog.scss
+++ b/src/components/DeleteMovieDialog/DeleteMovieDialog.scss
@@ -1,6 +1,7 @@
 @import "styles/colors";
 @import "styles/fonts";
 @import "styles/buttons";
+@import "styles/z-index";
 
 .delete-movie {
   &__dialog {
@@ -9,7 +10,7 @@
     height: 1787px;
     left: 0px;
     top: 0px;
-    z-index: 1;
+    z-index: $z-index-modal-background;
 
     background: rgba(35, 35, 35, 0.918051);
   }
@@ -22,7 +23,7 @@
 
     width: 686px;
     height: 352px;
-    z-index: 3;
+    z-index: $z-index-modal;
 
     background: $color-dark-grey;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.07),
