--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,5 @@
 @import "styles/colors";
+@import "styles/z-index";
 
 .header {
   height: 600px;
@@ -34,7 +35,7 @@
     }
 
     &__add-movie:first-child {
-      z-index: 3;
+      z-index: $z-index-header;
     }
   }
 }
