--- a/src/components/MovieDialog/MovieDialog.scss
+++ b/src/components/MovieDialog/MovieDialog.scss
@@ -1,14 +1,15 @@
 @import "styles/colors";
 @import "styles/fonts";
 @import "styles/buttons";
+@import "styles/z-index";
 
 .movie-dialog {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 1788px;
   left: 0px;
   top: 0px;
-  z-index: 1;
+  z-index: $z-index-modal-background;
   mix-blend-mode: normal;
   background: rgba(35, 35, 35, 0.918051);
 
@@ -20,7 +21,7 @@
 
     width: 976px;
     height: 750px;
-    z-index: 5;
+    z-index: $z-index-modal;
 
     background: #232323;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.07),
