Color variables names update

--- a/src/components/AddMovieButton/AddMovieButton.scss
+++ b/src/components/AddMovieButton/AddMovieButton.scss
@@ -7,6 +7,6 @@
   width: 178px;
   height: 46px;
 
-  background: $color-medium-grey;
+  background: $secondary-background-color;
   border-color: transparent;
 }
