--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -9,5 +9,5 @@ footer {
   height: 70px;
   margin-bottom: 0;
 
-  background-color: $color-medium-grey;
+  background-color: $secondary-background-color;
 }
