--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,7 +4,7 @@
 .header {
   height: 600px;
   width: 100%;
-  background: $color-black;
+  background: $header-background-color;
   box-sizing: border-box;
 
   &__background {
