--- a/src/components/MoviesSearchBar/MoviesSearchBar.scss
+++ b/src/components/MoviesSearchBar/MoviesSearchBar.scss
@@ -23,7 +23,7 @@
     background-color: inherit;
 
     input {
-      background: $color-dark-grey;
+      background: $primary-background-color;
       border-color: transparent;
       mix-blend-mode: normal;
       opacity: 0.7;
