--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,7 +1,6 @@
-$color-white: #ffffff;
-$color-light-grey: #555555;
-$color-medium-grey: #424242;
-$color-dark-grey: #232323;
-$color-red: #f65261;
-$color-black: rgb(0, 0, 0);
-$font-stack: "Montserrat", sans-serif;
+$primary-background-color: #232323;
+$secondary-background-color: #424242;
+$tertiary-backgound-color: #555555;
+$header-background-color: #000000;
+$main-text-color: #ffffff;
+$secondary-text-color: #f65261;
