--- a/src/components/DeleteMovieDialog/DeleteMovieDialog.scss
+++ b/src/components/DeleteMovieDialog/DeleteMovieDialog.scss
@@ -25,7 +25,7 @@
     height: 352px;
     z-index: $z-index-modal;
 
-    background: $color-dark-grey;
+    background: $primary-background-color;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.07),
       0px 10px 20px rgba(0, 0, 0, 0.05), 0px 10px 50px rgba(0, 0, 0, 0.05);
 
