--- a/src/components/MovieContextMenu/MovieContextMenu.scss
+++ b/src/components/MovieContextMenu/MovieContextMenu.scss
@@ -42,7 +42,7 @@
   }
 
   ul li:hover {
-    background: $color-red;
+    background: $secondary-text-color;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1),
       0px 10px 20px rgba(0, 0, 0, 0.1), 0px 10px 50px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(28px);
