--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,6 +1,7 @@
+$font-stack: "Montserrat", sans-serif;
 @mixin font($weight: 500, $size: 20px, $height: 24px) {
   font-family: $font-stack;
-  color: $color-white;
+  color: $main-text-color;
   font-style: normal;
 
   font-weight: $weight;
