Add normalize.css file

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
+@import "../src/styles/normalize";
+
 * {
-  margin: 0px;
-  padding: 0px;
+  box-sizing: border-box;
 }
 
 body::-webkit-scrollbar {
