Rename Header component to MoviesSearchContainer

--- a/src/components/MoviesSearchContainer/MoviesSearchContainer.scss
+++ b/src/components/MoviesSearchContainer/MoviesSearchContainer.scss
@@ -1,7 +1,7 @@
 @import "styles/colors";
 @import "styles/z-index";
 
-.header {
+.movies-search-container {
   height: 600px;
   width: 100%;
   background: $header-background-color;
