--- a/src/components/MoviesList/MoviesList.scss
+++ b/src/components/MoviesList/MoviesList.scss
@@ -1,8 +1,10 @@
 .movies-list {
+  margin-bottom: 0;
+  padding-top: 26px;
+
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  padding-top: 26px;
   justify-content: space-evenly;
 
   list-style-type: none;
