--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -13,8 +13,9 @@
     justify-content: flex-end;
 
     .menu-icon {
-      padding-top: 14px;
-      padding-right: 14px;
+      margin-top: 14px;
+      margin-left: -14px;
+
       position: absolute;
       opacity: 0;
 
