--- a/src/components/MovieContextMenu/MovieContextMenu.scss
+++ b/src/components/MovieContextMenu/MovieContextMenu.scss
@@ -9,7 +9,7 @@
   margin-top: 14px;
   margin-right: 14px;
 
-  background: rgba(35, 35, 35, 0.918051);
+  background: $primary-background-color;
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1),
     0px 10px 20px rgba(0, 0, 0, 0.1), 0px 10px 50px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(27.1828px);
@@ -20,17 +20,17 @@
     right: 8px;
     top: 6px;
 
-    background-color: inherit;
+    background-color: $primary-background-color;
     border: none;
   }
 
   &__list {
     list-style-type: none;
     margin-top: 30px;
+    padding-left: 0;
 
     display: flex;
     flex-direction: column;
-    align-items: space-around;
 
     li {
       @include font($weight: 400, $size: 16px, $height: 20px);
