--- a/src/components/MovieDetails/MovieDetails.scss
+++ b/src/components/MovieDetails/MovieDetails.scss
@@ -21,7 +21,7 @@
     padding-bottom: 30px;
 
     img {
-      padding-left: 60px;
+      margin-left: 60px;
 
       width: 324px;
       height: 486px;
@@ -33,6 +33,7 @@
       .movie-details__first-row {
         display: flex;
         flex-direction: row;
+        align-items: center;
 
         .movie-details__title {
           @include font($weight: 300, $size: 40px, $height: 50px);
@@ -43,6 +44,10 @@
         }
 
         .movie-details__rate {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
           margin-left: 26px;
           box-sizing: border-box;
           border: 1px solid #ffffff;
@@ -50,13 +55,9 @@
           border-radius: 50%;
           width: 60px;
           height: 60px;
+
           p {
             @include font($weight: 300, $size: 20px, $height: 24px);
-
-            text-align: center;
-            text-transform: uppercase;
-            top: calc(50% - 24px / 2);
-            padding-top: 18px;
           }
         }
       }
