--- a/src/components/MoviesSearchBar/MoviesSearchBar.scss
+++ b/src/components/MoviesSearchBar/MoviesSearchBar.scss
@@ -18,6 +18,8 @@
   }
 
   &__form {
+    display: flex;
+
     margin-left: 150px;
     margin-top: 50px;
     background-color: inherit;
@@ -42,6 +44,10 @@
     }
 
     .button__search {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
       width: 234px;
       height: 58px;
       margin-left: 14px;
@@ -51,7 +57,6 @@
       p {
         width: 86px;
         height: 24px;
-        padding-left: 32%;
 
         @include font($weight: 500, $size: 20px, $height: 24px);
         background-color: inherit;
