Remove big margins

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -28,9 +28,7 @@
     &__add-movie {
       display: flex;
       justify-content: space-between;
-      margin-left: 76px;
-      margin-top: 24px;
-      margin-right: 86px;
+      margin: 24px;
       background: inherit;
     }
 
