--- a/src/components/DeleteMovieDialog/DeleteMovieDialog.scss
+++ b/src/components/DeleteMovieDialog/DeleteMovieDialog.scss
@@ -7,7 +7,7 @@
   &__dialog {
     position: fixed;
     width: 100%;
-    height: 1787px;
+    height: 2000px;
     left: 0px;
     top: 0px;
     z-index: $z-index-modal-background;
@@ -21,8 +21,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
-    width: 686px;
-    height: 352px;
+    display: flex;
+    flex-direction: column;
+
+    width: 700px;
+    height: 350px;
     z-index: $z-index-modal;
 
     background: $primary-background-color;
@@ -30,44 +33,43 @@
       0px 10px 20px rgba(0, 0, 0, 0.05), 0px 10px 50px rgba(0, 0, 0, 0.05);
 
     .close-button {
-      position: absolute;
-      right: 26px;
-      top: 28px;
+      margin-right: 20px;
+      margin-top: 20px;
+      display: flex;
+      justify-content: flex-end;
 
       background-color: inherit;
       border: none;
     }
 
     h2 {
-      @include font($weight: 300, $size: 40px, $height: 49px);
+      @include font($weight: 300, $size: 40px, $height: 50px);
+
+      display: flex;
+      justify-content: space-evenly;
 
       letter-spacing: 2px;
       text-transform: uppercase;
-
-      margin-top: 64px;
-      margin-left: 82px;
-      margin-bottom: 52px;
     }
 
     p {
       @include font($weight: 400, $size: 20px, $height: 24px);
 
-      margin-left: 82px;
-      margin-top: 38px;
+      display: flex;
+      justify-content: space-evenly;
     }
 
     &__button {
-      margin-top: 50px;
-      margin-right: 60px;
-
       display: flex;
       flex-direction: row;
-      justify-content: end;
+      justify-content: center;
+
+      margin-top: 20px;
 
       button {
         @extend %btn--primary-shared;
         width: 180px;
-        height: 57px;
+        height: 60px;
       }
     }
   }
