--- a/src/components/GenresList/GenresList.scss
+++ b/src/components/GenresList/GenresList.scss
@@ -3,9 +3,9 @@
 
 .genres-list {
   list-style-type: none;
-  width: 436px;
-  padding-top: 20px;
-  padding-left: 56px;
+  width: 500px;
+  // padding-top: 20px;
+  // padding-left: 56px;
 
   display: flex;
   justify-content: space-between;
@@ -14,7 +14,6 @@
   li {
     @include font($weight: 500, $size: 16px, $height: 20px);
 
-    height: 20px;
     text-transform: uppercase;
     text-decoration: none;
   }
