--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: column;
 
+  position: relative;
+
   width: 328px;
   height: 560px;
 
@@ -13,15 +15,11 @@
     justify-content: flex-end;
 
     .menu-icon {
-      margin-top: 14px;
-      margin-left: -14px;
+      top: 14px;
+      right: 14px;
 
       position: absolute;
-      opacity: 0;
-
-      &:hover {
-        opacity: 1;
-      }
+      opacity: 1;
     }
 
     img {
