--- a/src/components/MovieContextMenu/MovieContextMenu.scss
+++ b/src/components/MovieContextMenu/MovieContextMenu.scss
@@ -6,8 +6,8 @@
   width: 190px;
   height: 112px;
 
-  margin-top: 14px;
-  margin-right: 14px;
+  top: 50px;
+  right: 14px;
 
   background: $primary-background-color;
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1),
