Delete big margins and paddings. Change dimensions numbers to even numbers

--- a/src/components/FilterGenreResult/FilterGenreResult.scss
+++ b/src/components/FilterGenreResult/FilterGenreResult.scss
@@ -4,7 +4,7 @@
 .filter-genre-result {
   @include font($weight: normal, $size: 20px, $height: 24px);
 
-  padding-top: 25px;
+  margin-left: 24px;
 
   span {
     font-weight: 600;
