--- a/src/components/GenresList/GenresList.scss
+++ b/src/components/GenresList/GenresList.scss
@@ -4,8 +4,7 @@
 .genres-list {
   list-style-type: none;
   width: 500px;
-  // padding-top: 20px;
-  // padding-left: 56px;
+  margin-top: 20px;
 
   display: flex;
   justify-content: space-between;
