--- a/src/components/DeleteMovieDialog/DeleteMovieDialog.scss
+++ b/src/components/DeleteMovieDialog/DeleteMovieDialog.scss
@@ -23,9 +23,10 @@
 
     display: flex;
     flex-direction: column;
+    row-gap: 30px;
 
     width: 700px;
-    height: 350px;
+    height: 400px;
     z-index: $z-index-modal;
 
     background: $primary-background-color;
@@ -44,7 +45,7 @@
 
     h2 {
       @include font($weight: 300, $size: 40px, $height: 50px);
-
+      margin: 0;
       display: flex;
       justify-content: space-evenly;
 
