--- a/src/components/ErrorBoundary/ErrorBoundary.scss
+++ b/src/components/ErrorBoundary/ErrorBoundary.scss
@@ -1,7 +1,7 @@
 @import "styles/colors";
 
 .error-boundary {
-  padding-top: 50px;
-  padding-left: 50px;
+  margin-top: 24px;
+  margin-top: 24px;
   color: $secondary-text-color;
 }
