--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,6 +8,7 @@
   box-sizing: border-box;
 
   &__background {
+    position: relative;
     box-sizing: border-box;
     height: 100%;
     background: url("https://s3-alpha-sig.figma.com/img/9ab1/b611/92a81bbe79a924292111ca43f3a39e8f?Expires=1656892800&Signature=IxSujAbWmoaC-2hbfXy5tMieIBxTpL-mOk9vuyS0~jnH2vSIFg9TyqVzAH3mrCYFHNB6hB-MquqH0ZWlv26KSM-P4SN~5unYjtbJjd6hFanSDN2c~O6nTTOCopawppkTb1AX~ER79QhoCGgNqSXWdhdA3LEngk7m5xRPPinmV7YGjfGwIvG9q~WHSCPHjkvi3~EatBfHBwqD-ZVD34xi9RZnKn8OmcnUpKMvtcalPDcVZvBFsqDQmFQFGZX4rdAxPiimP2YK6LD5rupltwDOvKUhY7zsVvmuxIrGl5uMdrAAK-D6i7QixUH9BekONMFYxPbLwDqkUTNGnTJZ5qqS7g__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
@@ -23,7 +24,12 @@
     position: absolute;
     top: 0;
     width: 100%;
+    height: inherit;
     background: transparent;
+
+    display: flex;
+    flex-direction: column;
+    row-gap: 50px;
 
     &__add-movie {
       display: flex;
