--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -5,28 +5,26 @@
   display: flex;
   flex-direction: column;
 
-  width: 328px;
-  height: 560px;
+  position: relative;
+
+  width: 350px;
+  height: 600px;
 
   &__container {
     display: flex;
     justify-content: flex-end;
 
     .menu-icon {
-      margin-top: 14px;
-      margin-left: -14px;
+      top: 14px;
+      right: 14px;
 
       position: absolute;
-      opacity: 0;
-
-      &:hover {
-        opacity: 1;
-      }
+      opacity: 1;
     }
 
     img {
-      width: 328px;
-      height: 464px;
+      width: 350px;
+      height: 500px;
     }
   }
 
@@ -51,8 +49,8 @@
       align-items: center;
       box-sizing: border-box;
 
-      width: 66px;
-      height: 22px;
+      width: 70px;
+      height: 20px;
 
       border: 1px solid #979797;
       opacity: 0.5;
