--- a/src/components/MovieContextMenu/MovieContextMenu.scss
+++ b/src/components/MovieContextMenu/MovieContextMenu.scss
@@ -2,12 +2,15 @@
 @import "styles/fonts";
 
 .movie-context-menu {
-  position: absolute;
-  width: 190px;
-  height: 112px;
+  width: 150px;
+  height: 100px;
 
-  margin-top: 14px;
-  margin-right: 14px;
+  position: absolute;
+  top: 50px;
+  right: 14px;
+
+  display: flex;
+  flex-direction: column;
 
   background: $primary-background-color;
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1),
@@ -15,27 +18,23 @@
   backdrop-filter: blur(27.1828px);
   border-radius: 4px;
 
-  button {
-    position: absolute;
-    right: 8px;
-    top: 6px;
+  &__button {
+    display: flex;
+    flex-direction: row-reverse;
+  }
 
+  button {
     background-color: $primary-background-color;
     border: none;
   }
 
   &__list {
     list-style-type: none;
-    margin-top: 30px;
     padding-left: 0;
-
-    display: flex;
-    flex-direction: column;
 
     li {
       @include font($weight: 400, $size: 16px, $height: 20px);
-
-      padding: 6px 14px 8px 24px;
+      padding: 6px 14px 8px 14px;
       mix-blend-mode: normal;
       opacity: 0.8;
     }
