--- a/src/components/MovieDialog/MovieDialog.scss
+++ b/src/components/MovieDialog/MovieDialog.scss
@@ -6,7 +6,7 @@
 .movie-dialog {
   position: fixed;
   width: 100%;
-  height: 1788px;
+  height: 2000px;
   left: 0px;
   top: 0px;
   z-index: $z-index-modal-background;
@@ -19,7 +19,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
-    width: 1000px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 800px;
     height: 800px;
     z-index: $z-index-modal;
 
@@ -28,95 +32,94 @@
       0px 10px 20px rgba(0, 0, 0, 0.05), 0px 10px 50px rgba(0, 0, 0, 0.05);
 
     .close-button {
-      position: absolute;
-      right: 26.12px;
-      top: 27.64px;
-
+      margin-top: 10px;
+      margin-right: 10px;
+      align-self: flex-end;
       background-color: inherit;
       border: none;
     }
 
     h2 {
-      margin-top: 64px;
-      margin-left: 46px;
-      margin-bottom: 52px;
-
       @include font($weight: 300, $size: 40px, $height: 50px);
       text-transform: uppercase;
       letter-spacing: 2px;
     }
-
-    .movie-dialog__form {
+    form {
       display: flex;
-      justify-content: center;
-      gap: 30px;
-      margin-bottom: 30px;
+      flex-direction: column;
+      row-gap: 30px;
 
-      .movie-dialog__form__row {
+      .movie-dialog__form {
         display: flex;
-        flex-direction: column;
+        justify-content: flex-start;
+        gap: 30px;
 
-        .movie-dialog__form__column-left {
-          width: 526px;
-          height: 58px;
+        .movie-dialog__form__row {
+          display: flex;
+          flex-direction: column;
 
-          background: $secondary-background-color;
-          mix-blend-mode: normal;
-          opacity: 0.8;
-          border-radius: 4px;
-          border: none;
-        }
+          .movie-dialog__form__column-left {
+            width: 400px;
+            height: 60px;
 
-        .movie-dialog__form__column-right {
-          width: 301px;
-          height: 57px;
+            background: $secondary-background-color;
+            mix-blend-mode: normal;
+            opacity: 0.8;
+            border-radius: 4px;
+            border: none;
+          }
 
-          background: $secondary-background-color;
-          mix-blend-mode: normal;
-          opacity: 0.8;
-          border-radius: 4px;
-          border: none;
-        }
+          .movie-dialog__form__column-right {
+            width: 300px;
+            height: 60px;
 
-        label {
-          margin-bottom: 13px;
+            background: $secondary-background-color;
+            mix-blend-mode: normal;
+            opacity: 0.8;
+            border-radius: 4px;
+            border: none;
+          }
 
-          @include font($weight: 600, $size: 16px, $height: 20px);
-          color: $secondary-text-color;
-          letter-spacing: 1px;
-          text-transform: uppercase;
+          label {
+            margin-bottom: 14px;
 
-          mix-blend-mode: normal;
-          opacity: 0.8;
-        }
+            @include font($weight: 600, $size: 16px, $height: 20px);
+            color: $secondary-text-color;
+            letter-spacing: 1px;
+            text-transform: uppercase;
 
-        p {
-          margin-top: 6px;
+            mix-blend-mode: normal;
+            opacity: 0.8;
+          }
 
-          @include font($weight: 400, $size: 14px, $height: 18px);
-          color: $secondary-text-color;
-          mix-blend-mode: normal;
-          opacity: 0.8;
-        }
+          p {
+            margin-top: 6px;
 
-        input,
-        textarea,
-        select {
-          padding-left: 20px;
+            @include font($weight: 400, $size: 14px, $height: 18px);
+            color: $secondary-text-color;
+            mix-blend-mode: normal;
+            opacity: 0.8;
+          }
 
-          @include font($weight: 400, $size: 20px, $height: 24px);
-        }
+          input,
+          textarea,
+          select {
+            padding-left: 20px;
 
-        .movie-dialog__form__overview {
-          width: 860px;
-          height: 98px;
-          background: $secondary-background-color;
-          mix-blend-mode: normal;
-          opacity: 0.8;
-          border-radius: 4px;
-          border: none;
+            @include font($weight: 400, $size: 20px, $height: 24px);
+          }
 
-          padding-top: 20px;
+          .movie-dialog__form__overview {
+            width: 700px;
+            height: 100px;
+            background: $secondary-background-color;
+            mix-blend-mode: normal;
+            opacity: 0.8;
+            border-radius: 4px;
+            border: none;
+
+            padding-top: 20px;
+          }
         }
       }
     }
@@ -125,25 +128,21 @@
       display: flex;
       flex-direction: row;
       justify-content: end;
-      padding-bottom: 60px;
+      column-gap: 30px;
 
       .btn--secondary {
-        margin-right: 30px;
-
         @extend %btn--secondary-shared;
-        width: 180px;
-        height: 58px;
+        width: 200px;
+        height: 60px;
 
         background: inherit;
         border: 1.5px solid $secondary-text-color;
       }
 
       .btn--primary {
-        margin-right: 30px;
-
         @extend %btn--primary-shared;
-        width: 180px;
-        height: 58px;
+        width: 200px;
+        height: 60px;
       }
     }
   }
