--- a/src/components/MoviesSearchBar/MoviesSearchBar.scss
+++ b/src/components/MoviesSearchBar/MoviesSearchBar.scss
@@ -5,33 +5,36 @@
 .movies-search-bar {
   display: flex;
   flex-direction: column;
+  align-items: center;
   background-color: inherit;
+  row-gap: 30px;
 
   &__header {
     @include font($weight: 300, $size: 40px, $height: 50px);
     letter-spacing: 1px;
     text-transform: uppercase;
     background-color: inherit;
-
-    padding-left: 150px;
-    padding-top: 58px;
   }
 
   &__form {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    row-gap: 20px;
 
-    margin-left: 150px;
-    margin-top: 50px;
     background-color: inherit;
 
     input {
+      display: flex;
+      flex-basis: 60%;
+
       background: $primary-background-color;
       border-color: transparent;
       mix-blend-mode: normal;
       opacity: 0.7;
       border-radius: 4px;
-      width: 714px;
-      height: 58px;
+      width: 700px;
+      height: 60px;
 
       @include font($weight: 400, $size: 20px, $height: 24px);
       padding-left: 2%;
@@ -47,15 +50,16 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      flex-basis: 20%;
 
-      width: 234px;
-      height: 58px;
+      width: 250px;
+      height: 60px;
       margin-left: 14px;
 
       @extend %btn--primary-shared;
 
       p {
-        width: 86px;
+        width: 100px;
         height: 24px;
 
         @include font($weight: 500, $size: 20px, $height: 24px);
