Codereview fixes. Implement BEM convention for MovieDialog

--- a/src/components/MovieDetails/MovieDetails.scss
+++ b/src/components/MovieDetails/MovieDetails.scss
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 
   .movie-details__nav {
-    padding: 24px 24px;
+    padding: 24px;
 
     display: flex;
     flex-direction: row;
