--- a/src/components/DeleteMovieDialog/DeleteMovieDialog.scss
+++ b/src/components/DeleteMovieDialog/DeleteMovieDialog.scss
@@ -2,76 +2,55 @@
 @import "styles/fonts";
 @import "styles/buttons";
 @import "styles/z-index";
+@import "styles/modal";
 
-.delete-movie {
-  &__dialog {
-    position: fixed;
-    width: 100%;
-    height: 2000px;
-    left: 0px;
-    top: 0px;
-    z-index: $z-index-modal-background;
+.movie-dialog {
+  @include modal-background();
 
-    background: rgba(35, 35, 35, 0.918051);
+  .modal-small {
+    @include modal($width: 50vw, $height: 30vh);
   }
 
-  &__container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  .modal {
+    @include modal($width: 80vw, $height: 75vh);
+  }
 
+  .modal-header {
     display: flex;
     flex-direction: column;
-    row-gap: 30px;
 
-    width: 700px;
-    height: 400px;
-    z-index: $z-index-modal;
-
-    background: $primary-background-color;
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.07),
-      0px 10px 20px rgba(0, 0, 0, 0.05), 0px 10px 50px rgba(0, 0, 0, 0.05);
-
-    .close-button {
-      margin-right: 20px;
-      margin-top: 20px;
+    &__button {
       display: flex;
       justify-content: flex-end;
-
+      margin-right: 20px;
+      margin-top: 20px;
       background-color: inherit;
       border: none;
     }
 
-    h2 {
+    &__title {
       @include font($weight: 300, $size: 40px, $height: 50px);
-
-      display: flex;
-      justify-content: space-evenly;
-
+      margin: 0 auto;
       letter-spacing: 2px;
       text-transform: uppercase;
     }
+  }
 
-    p {
-      @include font($weight: 400, $size: 20px, $height: 24px);
+  .modal-content {
+    @include font($weight: 400, $size: 20px, $height: 24px);
+    margin: 0 auto;
+  }
 
-      display: flex;
-      justify-content: space-evenly;
-    }
+  .modal-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
 
     &__button {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-
-      margin-top: 20px;
-
-      button {
-        @extend %btn--primary-shared;
-        width: 180px;
-        height: 60px;
-      }
+      @extend %btn--primary-shared;
+      width: 180px;
+      height: 60px;
     }
   }
 }
