--- a/src/components/MovieDialog/MovieDialog.scss
+++ b/src/components/MovieDialog/MovieDialog.scss
@@ -2,149 +2,122 @@
 @import "styles/fonts";
 @import "styles/buttons";
 @import "styles/z-index";
+@import "styles/modal";
 
 .movie-dialog {
-  position: fixed;
-  width: 100%;
-  height: 2000px;
-  left: 0px;
-  top: 0px;
-  z-index: $z-index-modal-background;
-  mix-blend-mode: normal;
-  background: rgba(35, 35, 35, 0.918051);
+  @include modal-background();
 
-  &__container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  .modal {
+    @include modal($width: 80vw, $height: 75vh);
+  }
+  .modal-small {
+    @include modal($width: 50vw, $height: 30vh);
+  }
 
+  .modal-header {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    row-gap: 30px;
 
-    width: 800px;
-    height: 800px;
-    z-index: $z-index-modal;
-
-    background: #232323;
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.07),
-      0px 10px 20px rgba(0, 0, 0, 0.05), 0px 10px 50px rgba(0, 0, 0, 0.05);
-
-    .close-button {
-      margin-top: 10px;
-      margin-right: 10px;
-      align-self: flex-end;
+    &__button {
+      display: flex;
+      justify-content: flex-end;
+      margin-right: 20px;
+      margin-top: 20px;
       background-color: inherit;
       border: none;
     }
 
-    h2 {
+    &__title {
       @include font($weight: 300, $size: 40px, $height: 50px);
-      text-transform: uppercase;
+      margin: 0 auto;
       letter-spacing: 2px;
+      text-transform: uppercase;
     }
-    form {
+  }
+
+  .modal-content {
+    @include font($weight: 400, $size: 20px, $height: 24px);
+    margin: 0 auto;
+
+    &__row {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+
+    &__column-left {
       display: flex;
       flex-direction: column;
-      row-gap: 30px;
-
-      .movie-dialog__form {
-        display: flex;
-        justify-content: flex-start;
-        gap: 30px;
-
-        .movie-dialog__form__row {
-          display: flex;
-          flex-direction: column;
-
-          .movie-dialog__form__column-left {
-            width: 400px;
-            height: 60px;
-
-            background: $secondary-background-color;
-            mix-blend-mode: normal;
-            opacity: 0.8;
-            border-radius: 4px;
-            border: none;
-          }
-
-          .movie-dialog__form__column-right {
-            width: 300px;
-            height: 60px;
-
-            background: $secondary-background-color;
-            mix-blend-mode: normal;
-            opacity: 0.8;
-            border-radius: 4px;
-            border: none;
-          }
-
-          label {
-            margin-bottom: 14px;
-
-            @include font($weight: 600, $size: 16px, $height: 20px);
-            color: $secondary-text-color;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-
-            mix-blend-mode: normal;
-            opacity: 0.8;
-          }
-
-          p {
-            margin-top: 6px;
-
-            @include font($weight: 400, $size: 14px, $height: 18px);
-            color: $secondary-text-color;
-            mix-blend-mode: normal;
-            opacity: 0.8;
-          }
-
-          input,
-          textarea,
-          select {
-            padding-left: 20px;
-
-            @include font($weight: 400, $size: 20px, $height: 24px);
-          }
-
-          .movie-dialog__form__overview {
-            width: 700px;
-            height: 100px;
-            background: $secondary-background-color;
-            mix-blend-mode: normal;
-            opacity: 0.8;
-            border-radius: 4px;
-            border: none;
-
-            padding-top: 20px;
-          }
-        }
-      }
+      margin-right: 20px;
     }
 
-    .movie-dialog__buttons {
+    &__column-right {
       display: flex;
-      flex-direction: row;
-      justify-content: end;
-      column-gap: 30px;
+      flex-direction: column;
+    }
 
-      .btn--secondary {
-        @extend %btn--secondary-shared;
-        width: 200px;
-        height: 60px;
+    &__input {
+      width: 400px;
+      height: 60px;
 
-        background: inherit;
-        border: 1.5px solid $secondary-text-color;
-      }
+      background: $secondary-background-color;
+      mix-blend-mode: normal;
+      opacity: 0.8;
+      border-radius: 4px;
+      border: none;
+    }
 
-      .btn--primary {
-        @extend %btn--primary-shared;
-        width: 200px;
-        height: 60px;
-      }
+    &__textarea {
+      width: 60vw;
+      height: 100px;
+      background: $secondary-background-color;
+      mix-blend-mode: normal;
+      opacity: 0.8;
+      border-radius: 4px;
+      border: none;
+
+      padding-top: 20px;
+    }
+
+    &__label {
+      margin-bottom: 14px;
+
+      @include font($weight: 600, $size: 16px, $height: 20px);
+      color: $secondary-text-color;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+
+      mix-blend-mode: normal;
+      opacity: 0.8;
+    }
+
+    &__input,
+    &__textarea {
+      padding-left: 20px;
+      @include font($weight: 400, $size: 20px, $height: 24px);
+    }
+  }
+
+  .modal-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+
+    &__button-secondary {
+      @extend %btn--secondary-shared;
+      width: 200px;
+      height: 60px;
+
+      background: inherit;
+      border: 1.5px solid $secondary-text-color;
+    }
+
+    &__button-primary {
+      @extend %btn--primary-shared;
+      width: 200px;
+      height: 60px;
     }
   }
 }
