Fix implementation of separators

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -4,7 +4,9 @@
   height: auto;
   overflow: visible;
 
-  .separator {
+  &::before {
+    content: " ";
+    display: block;
     height: 10px;
     background: $tertiary-backgound-color;
   }
@@ -27,9 +29,9 @@
       margin-left: 24px;
     }
 
-    &__separator {
-      margin-left: 24px;
-      margin-right: 24px;
+    &__tools::after {
+      content: " ";
+      margin: 24px 24px 0 24px;
 
       width: 94%;
       height: 2px;
