Fix class names to be complied with BEM

--- a/src/components/MoviesSearchBar/MoviesSearchBar.scss
+++ b/src/components/MoviesSearchBar/MoviesSearchBar.scss
@@ -16,7 +16,7 @@
     background-color: inherit;
   }
 
-  .search-bar {
+  .search-form {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
