--- a/src/components/MovieDetails/MovieDetails.scss
+++ b/src/components/MovieDetails/MovieDetails.scss
@@ -7,7 +7,7 @@
   background: $primary-background-color;
   box-sizing: border-box;
 
-  .details-header {
+  .movie-header {
     padding: 24px;
 
     display: flex;
@@ -15,7 +15,7 @@
     justify-content: space-between;
   }
 
-  .details__content {
+  .movie__content {
     display: flex;
     flex-direction: row;
     align-items: center;
