--- a/src/components/MoviesSearchBar/MoviesSearchBar.scss
+++ b/src/components/MoviesSearchBar/MoviesSearchBar.scss
@@ -38,7 +38,7 @@
       height: 60px;
 
       @include font($weight: 400, $size: 20px, $height: 24px);
-      padding-left: 2%;
+      padding-left: 14px;
     }
 
     &__input::placeholder {
